fix scrollbar issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -93,7 +93,9 @@
 
 
  
-
+body {
+    overflow:hidden;
+}
 
 
 video{
